# alchemate

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: merged_molecule.s3  run_full_workflow.py  run_simple_workflow.py
src/alchemate/: __init__.py  context.py  logger.py  manager.py
src/alchemate/config/: _config.py
src/alchemate/steps/: __init__.py  _run_somd2.py  base.py  postprocessing.py  preprocessing.py
tests/: test_context.py  test_manager.py  test_postprocessing.py  test_preprocessing.py  test_run_somd2.py  test_workflows.py
