[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "alchemate"
dynamic = ["version"]
authors = [
  { name="Audrius Kalpokas", email= "akalpokas16@gmail.com" },
]
description = "Modular SOMD2 post-processing workflows"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.11"
dependencies = [
  "colorlog",
  "rich",
]

optional-dependencies.dev = [
  "pytest",
  "ruff",
  "pre-commit"
]

[project.urls]
Homepage = "https://https://github.com/akalpokas/alchemate"
Issues = "https://https://github.com/akalpokas/alchemate/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
